Fixed styling issue where buttons wouldn't style on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,3 +105,9 @@ p {
 input {
     -webkit-appearance: none;
 }
+
+#name {
+    font-size: 10px;
+    color: #cb99c5; 
+     text-align: center;
+}
